force-app/main/default/objects/Module__c/Module__c.object-meta.xml
<CustomObject>
    <label>Module</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Modules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>