force-app/main/default/objects/Module__c/fields/Badge__c.field-meta.xml
<CustomField>
    <fullName>Badge__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A badge is given when a module is completed.</description>
    <label>Badge</label>
    <type>Checkbox</type>
</CustomField>