force-app/main/default/objects/Module__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if a module if available for students</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>