force-app/main/default/objects/Module__c/fields/Total_Points__c.field-meta.xml
<CustomField>
    <fullName>Total_Points__c</fullName>
    <description>Points acumulated in related units.</description>
    <label>Total Points</label>
    <summarizedField>Unit__c.Total_Points__c</summarizedField>
    <summaryForeignKey>Unit__c.Module__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>