force-app/main/default/objects/Module__c/validationRules/Validate_Skill_and_Role.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Skill_and_Role</fullName>
    <active>true</active>
    <description>To activate a module, it must contain at least one skill and one role.</description>
    <errorConditionFormula>IF( 
  AND( 
    Is_Active__c , 
    OR( 
      ISBLANK( TEXT( Skills__c ) ), 
      ISBLANK( Roles__c ) 
    ) 
  ), 
  true, 
  false 
)</errorConditionFormula>
    <errorMessage>To activate the module, skill and role must be associated.</errorMessage>
</ValidationRule>